--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -50,7 +50,7 @@ li {
 
 
 .active {
-    padding-bottom: 2px;
+    padding-bottom: 1px;
     border-bottom: 2px solid tomato;
 }
 
@@ -71,6 +71,17 @@ li {
 
 .navbar-search .dot p {
     text-align: center;
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.profile p {
+    font-size: 15px;
+    font-family: sans-serif;
 }
 
 
