--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -1,8 +1,16 @@
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 20px 0px;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; /* Cambiado de 80% a 100% para ocupar todo el ancho */
+    height: 5rem; /* Asegúrate de que este tamaño sea lo que necesitas */
+    gap: 5px;
+    z-index: 1000; /* Asegúrate de que esté por encima de otros elementos */
+    transition: background-color 0.3s ease;
 }
 
 .navbar-menu {
@@ -11,6 +19,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+    display: none;
 }
 
 ul {
@@ -28,25 +37,20 @@ li {
     justify-content: space-around;
     align-items: center;
     gap: 30px;
-
 }
 
 .navbar button {
-    background: transparent;
+    background: tomato;
     font-size: 16px;
-    color: #495573;
-    border: 1px solid tomato;
+    color: #ffffff;
+    border: none;
     padding: 10px 30px;
     border-radius: 50px;
     cursor: pointer;
     transition: ease-in 0.2s;
+    font-family: sans-serif;
 }
 
-.navbar button:hover {
-    background: tomato;
-    color: #fff;
-    transition: ease-in-out 0.2s;
-}
 
 
 .active {
@@ -58,11 +62,18 @@ li {
     position: relative;
 }
 
+.navbar.scrolled {
+    background: rgb(238, 236, 236);
+    box-shadow: 0px 3px 5px -3px rgba(0,0,0,0.9);
+-webkit-box-shadow: 0px 3px 5px -3px rgba(0,0,0,0.6);
+-moz-box-shadow: 0px 3px 5px -3px rgba(0,0,0,0.6);
+  }
+
 .navbar-search .dot {
     position: absolute;
     min-width: 19px;
     min-height: 10px;
-    background-color: tomato;
+    background-color: red;
     border-radius: 100%;
     color: white;
     top: -8px;
@@ -72,6 +83,38 @@ li {
 .navbar-search .dot p {
     text-align: center;
 }
+
+.searcher {
+    display: flex;
+    position: relative;
+    width: 300px;
+    
+    
+    
+
+}
+
+.searcher input {
+    height: 50px ;
+    width: 100%;
+    border: 1px solid rgb(194, 191, 191);
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.searcher img {
+    width: 40px;
+    background: tomato;
+    padding: 5px;
+    border-radius: 4px;
+    color: white;
+    position: absolute;
+    left: 85%;
+    top: 10%;
+    
+}
+
+
 
 .profile {
     display: flex;
@@ -84,11 +127,9 @@ li {
     font-family: sans-serif;
 }
 
-
 .logo {
     cursor: pointer;
 }
-
 
 .navbar-profile {
     position: relative;
@@ -108,8 +149,7 @@ li {
     background-color: #fff2ef;
     padding: 12px 25px;
     border-radius: 4px;
-    border: 1px solid tomato;
-    outline: 2px solid;
+    border: 1px solid #ff6347;
     list-style: none;
 }
 
@@ -123,6 +163,21 @@ li {
 
 .nav-profile-dropdown img {
     width: 20px;
+}
+
+.mobile-logo {
+    display: none;
+}
+
+.profile p {
+    font-size: 15px;
+    font-family: sans-serif;
+}
+
+.profile span {
+    color: rgb(230, 103, 81);
+    text-transform: capitalize;
+    font-weight: 600;
 }
 
 @media (max-width: 1050px) {
@@ -144,6 +199,7 @@ li {
 
     .navbar-right button {
         padding: 8px 25px;
+
     }
 }
 
@@ -171,12 +227,46 @@ li {
 }
 
 @media (max-width: 750px) {
-   
-    
-
     .navbar-menu {
         display: none;
     }
 
-   
+    .logo {
+        width: 3px;
+    }
+
+    .searcher {
+        display: flex;
+        position: relative;
+        width: 50%;
+        
+        
+    
+    }
+    
+    
+}
+
+@media (max-width: 550px) {
+    .searcher img {
+        width: 30px;
+        background: tomato;
+        padding: 5px;
+        border-radius: 4px;
+        color: white;
+        position: absolute;
+        left: 82%;
+        top: 20%;
+        
+       
+        
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .mobile-logo {
+        display: block;
+    }
 }
