--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -47,8 +47,8 @@
 
 
 .explore-menu .active {
-    border: 4px solid tomato;
-    padding: 2px;
+    border: 2px solid #d90429;
+    padding: 1px;
 }
 
 @media (max-width: 1050px) {
