--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -1,10 +1,10 @@
 .login-popup {
     display: grid;
     position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    z-index: 1;
-    background-color: #00000090;
+    z-index: 2;
+    background-color: #000000c5;
     overflow: hidden;
 }
 
@@ -21,7 +21,7 @@
     border-radius: 8px;
     font-size: 14px;
     animation: fadeIn 0.5s;
-    margin-bottom: 150px;
+    margin-bottom: 200px;
 
     
 
@@ -55,10 +55,14 @@
 .login-popup-container button {
     border: none;
     color: white;
-    background-color: tomato;
+    background-color: #d90429;
     padding: 10px;
     border-radius: 5px;
     font-family: sans-serif;
+}
+
+.login-popup-container button:disabled {
+    background-color: lightgray;
 }
 
 .login-popup-condition {
@@ -72,5 +76,5 @@
     text-decoration: underline;
     font-weight: bold;
     cursor: pointer;
-    color: tomato;
+    color: #d90429;
 }
