--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,10 +4,12 @@
   box-sizing: border-box;
   font-family: Roboto ;
   scroll-behavior: smooth;
+
 }
 
 body {
   min-height: 100vh;
+  background-color: #edf2f4 
 }
 
 a {
@@ -18,6 +20,7 @@ a {
 .app {
   width: 80%;
   margin: auto;
+  
 }
 
 .no-scroll {
