--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -16,7 +16,7 @@
     gap: 1.5vw;
     max-width: 50%;
     height: 50vh;
-    top: 150px;
+    top: 90px;
     left: 6vw;
     animation: fadeIn 3s;
 }
@@ -26,6 +26,8 @@
     margin-bottom: 15px;
     color: rgb(255, 255, 255);
     font-size: max(4.5vw, 22px);
+    width: 900px;
+    max-width: 700p;
    
     
 }
@@ -116,7 +118,12 @@ height: 100%;
 @media (max-width: 1050px) {
     .header-contents {
         max-width: 45%;
-        top:60px;
+        top: 50px;
+    }
+
+    .header-contents h2 {
+        
+        width: 500px;
     }
 
     .header-contents p {
@@ -140,11 +147,17 @@ height: 100%;
 
 @media (max-width: 500px) {
     .header-contents {
-        top: 20px;
+        top: 10px;
+        width: 600px;
     }
 
     .header-contents p {
         display: none;
+    }
+
+    .header-contents h2 {
+        margin-bottom: 1px;
+        width: 280px;
     }
 
     .header-contents button {
