--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -5,6 +5,8 @@
     border-radius: 15px;
     box-shadow: 0px 0px 10px #00000015;
     animation: fadeIn;
+    display: flex;
+    flex-direction: column;
 }
 
 .food-item-img {
@@ -13,9 +15,11 @@
     border-radius: 15px 15px 0px 0px;
 }
 
-
 .food-item-info {
+    display: flex;
+    flex-direction: column;
     padding: 20px;
+    flex-grow: 1;
 }
 
 .food-item-rating {
@@ -30,22 +34,20 @@
     font-weight: 600;
 }
 
-
-
 .food-item-description {
     font-size: 12px;
     color: #676767;
     margin-bottom: 10px;
+    flex-grow: 1;
 }
 
 .food-item-price {
     color: #92031b;
     font-size: 22px;
     font-weight: 500;
-    margin: 10px 0px;
+    margin-top: auto;
+   
 }
-
-
 
 .food-item-img-container {
     position: relative;
@@ -70,7 +72,6 @@
     padding: 6px;
     border-radius: 50px;
     background-color: white;
-
 }
 
 .star {
@@ -82,6 +83,4 @@
     align-items: center;
     gap: 5px;
     margin-bottom: 10px;
-
 }
-
