--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -1,52 +1,110 @@
 .cart {
     margin-top: 100px;
+    padding-bottom: 50px;
     
+}
+
+.cart h3 {
+  margin-bottom: 30px;
 }
 
 .container-cart {
     display: flex;
-    width: 100%;
-}
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: white;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
 
-.cart-price {
+  .cart-items {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    margin: 10px;
-}
+    align-items: center;
+  }
 
-.cart-add {
+  .cart-items h3 {
+    margin-bottom: 20px;
+  }
+
+  
+  
+  .cart-container-image {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    background: white;
-    padding: 6px;
+    gap: 100px;
+    align-items: center;
+  }
+  
+  .cart-container-image img {
+    width: 80px; 
+    height: 80px; 
+    border-radius: 5px;
+  }
+  
+  .cart-details {
+    flex-grow: 1;
+    padding-left: 10px;
+  }
+  
+  .item-name {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+  }
+  
+  .item-price {
+    font-size: 14px;
+    color: #888;
+    margin: 0;
+  }
+  
+  .price {
+    font-weight: 600;
+  }
+  
+  .add-cart-counter {
+    display: flex;
+    align-items: center;
     gap: 10px;
-    border-radius: 50px;
-}
+  }
+  
+  .counter-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .counter-button.decrement {
+    background-color: #ffdddd;
+  }
+  
+  .counter-button.increment {
+    background-color: #ddffdd;
+  }
+  
+  .item-quantity {
+    font-size: 16px;
+    margin: 0;
+  }
 
-.cart-add img {
-    width: 20px;
-    height: 20px;
-}
 
-.cart-container-image {
-    width: 200px;
-}
-
-.cart-container-image img {
-    width: 50%;
-}
-
-
-.cart hr {
+  .cart hr {
     height: 1px;
     background-color: #e2e2e2;
+    margin-bottom: 10px;
 }
 
 .cart-bottom {
     display: flex;
-    margin-top: 90px;
+    margin-top: 130px;
     justify-content: space-between;
     gap: max(12vw,20px);
 }
@@ -114,12 +172,109 @@
 }
 
 
-@media (max-width: 750px) {
+.empty-cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    height: 80vh;
+} 
+
+                    
+.container-empty-cart {
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+
+.container-empty-cart button {
+  display: flex;
+  width: max(1vw, 150px);
+  color: white;
+  background-color: #d90429;
+  border: none;
+  padding: 2px;
+  border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+
+.container-empty-cart img {
+  width: 40px;
+  height: 40px;
+}
+
+.button {
+  margin-top: 30px;
+}
+
+
+.btn-empty-cart {
+    width: max(15vw, 200px);
+    color: white;
+    background-color: #d90429;
+    border: none;
+    padding: 12px 0px;
+    border-radius: 4px;
+}
+  
+  /* Media queries */
+
+  @media (max-width: 750px) {
     .cart-bottom {
         flex-direction: column-reverse;
     }
 
 }
+
+
+  @media (max-width: 600px) {
+    .container-cart {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .cart-container-image {
+        gap: 50px;
+        align-items: center;
+    }
+  
+    .cart-details {
+      padding-left: 0;
+      margin-top: 10px;
+      width: 100%;
+    }
+  
+    .add-cart-counter {
+      width: 100%;
+      justify-content: space-around;
+      margin-top: 10px;
+      
+    }
+
+    .empty-cart {
+        height: 65vh;
+    }
+
+    .empty-cart p {
+        font-size: 12px;
+    }
+
+   
+  }
+
+
+
+
+
 
 
 
