--- a/frontend/src/pages/Search/Search.css
+++ b/frontend/src/pages/Search/Search.css
@@ -1,3 +1,64 @@
 .container {
-    margin: 100px 0px
+    margin: 150px 0px
+}
+
+
+.food-list-search {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+    grid-gap: 30px;
+    margin-top: 30px;
+    row-gap: 30px;
+}
+
+
+
+.error-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
+}
+
+.error-page h1 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.error-404 {
+    font-size: max(3vh, 100px);
+    color: #d90429;
+}
+
+.error-page h2 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+
+
+.error-page p {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+
+.error-page img {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 50px;
+    
+}
+
+.error {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (max-width: 500px) {
+    .container {
+        margin: 150px 0px
+    }
 }
