--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -1,6 +1,9 @@
 .cart {
-    margin-top: 100px;
+    
     padding-bottom: 50px;
+    width: 90%;
+    margin: auto;
+    margin-top: 100px;
     
 }
 
