--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -1,31 +1,6 @@
-.login-popup {
-    display: grid;
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    z-index: 2;
-    background-color: #000000c5;
-    overflow: hidden;
-}
 
 
-.login-popup-container {
-    place-self: center;
-    min-width: 350px;
-    color: #808080;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    padding: 40px 40px;
-    border-radius: 8px;
-    font-size: 14px;
-    animation: fadeIn 0.5s;
-    margin-bottom: 200px;
 
-    
-
-}
 
 .login-popup-title {
     display: flex;
@@ -46,10 +21,7 @@
 }
 
 .login-popup-inputs input {
-    outline: none;
-    border: 1px solid #c9c9c9;
-    padding: 10px;
-    border-radius: 4px;
+   
 }
 
 .login-popup-container button {
@@ -59,6 +31,8 @@
     padding: 10px;
     border-radius: 5px;
     font-family: sans-serif;
+    width: 100%;
+    height: 30px;
 }
 
 .login-popup-container button:disabled {
