--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -23,6 +23,11 @@
    
 }
 
+.navbar-start {
+    display: flex;
+    justify-content: flex-start;
+}
+
 .navbar-menu {
     display: flex;
     flex-direction: row;
@@ -50,6 +55,10 @@ li {
     gap: 30px;
 }
 
+.disable-navbar-right {
+    display: none;
+}
+
 
 
 
@@ -68,7 +77,7 @@ li {
     width: 40px;
 }
 .navbar.scrolled {
-    background: rgb(238, 236, 236);
+    background: rgb(255, 255, 255);
     box-shadow: 0px 3px 5px -3px rgba(0,0,0,0.9);
 -webkit-box-shadow: 0px 3px 5px -3px rgba(0,0,0,0.6);
 -moz-box-shadow: 0px 3px 5px -3px rgba(0,0,0,0.6);
