--- a/frontend/src/pages/PlaceOrder/PlacerOrder.css
+++ b/frontend/src/pages/PlaceOrder/PlacerOrder.css
@@ -1,9 +1,11 @@
 .placeorder {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 50px;
-    margin-top: 100px;
-    align-items: start;
+    margin-top: 150px;
+    margin: 150px auto;
+    align-items: center;
+    width: 90%;
 }
 
 
