--- a/frontend/src/pages/myOrders/MyOrders.css
+++ b/frontend/src/pages/myOrders/MyOrders.css
@@ -1,30 +1,39 @@
 .my-orders {
-    margin: 100px 0px;
+    width: 80%;
+    margin: 150px auto;
+ 
     
 }
 
-.container {
+.container-order {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top: 100px;
+    margin-top: 50px;
+   
     
 }
 
+
+
 .my-orders-order {
     display: grid;
-    grid-template-columns: 0.5fr 3fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 0.5fr 1.5fr 1fr 1fr 1fr 1fr;
     align-items: center;
     justify-content: center;
-    border: 1px solid rgba(0, 0, 0, 0.336);
+    border: 1px solid rgba(99, 97, 97, 0.336);
     padding: 10px 10px;
-    background-color: rgb(245, 242, 242);
+    background-color: rgb(255, 255, 255);
     border-radius: 3px;
-}   
+} 
+
+.order-details {
+    display: flex;
+}
 
 .my-orders-order button {
     padding: 10px;
-    background-color: tomato;
+    background-color: #d90429;
     border: none;
     border-radius: 3px;
     color: white;
@@ -32,24 +41,34 @@
 
 }
 
+.my-orders-order button:disabled {
+  
+    background-color: #949292;
+   
+    color: white;
+  
+
+}
+
+
 .my-orders-order img {
     width: 50px;
 }
-.my-orders-order p span {
-    color: tomato;
-}
+/* .my-orders-order p span {
+    font-family: "Poppins";
+    font-weight: 900;
+    color: #d90429;
+} */
 
 .order-title {
     font-size: 15px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-transform: lowercase;
-    font-weight: 500;
+    font-weight: 700;
     color: black;
 }
 
 .order-price {
     font-size: 15px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-transform: lowercase;
     font-weight: 500;
     color: black;
@@ -57,18 +76,27 @@
 
 .order-product {
     font-size: 15px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-transform: lowercase;
     font-weight: 500;
     color: black;
 }
 
-.container b {
-    font-weight: 400;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.orange {
+    color: orange;
+    
 }
 
-@media (max-width: 900px) {
+.verde {
+    color: green;
+}
+
+.rojo {
+   color: #d90429
+}
+
+
+
+@media (max-width: 1050px) {
     /* .my-orders-order {
         grid-template-columns: 1fr 3fr 1fr;
         row-gap: 5px;
@@ -85,7 +113,7 @@
 
     .my-orders-order button {
         padding: 10px;
-        background-color: tomato;
+        background-color: #d90429;
         border: none;
         border-radius: 3px;
         color: white;
