--- a/admin/src/pages/List/List.css
+++ b/admin/src/pages/List/List.css
@@ -1,15 +1,25 @@
 .list.add p {
-    margin-bottom: 30px;
+    margin-bottom: 5px;
+}
+
+.add button {
+    background-color: #d90429;
+}
+
+.bold {
+    font-weight: 700;
+    color: black;
 }
 
 .list-table-format {
     display: grid;
-    grid-template-columns: 0.5fr 2fr 2fr 0.3fr;
+    grid-template-columns: 0.5fr 2fr 2fr 1fr;
     align-items: center;
     gap: 10px;
     padding: 10px 15px;
     border: 1px solid #cacaca;
     font-size: 13px;
+    margin-bottom: 5px;
 }
 
 .list-table-format .title {
@@ -26,8 +36,14 @@
 
 @media (max-width: 600px) {
     .list-table-format {
-        grid-template-columns: 1fr 3fr 1fr;
-        gap: 15px;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10px;
+        align-items: flex-start;
+    }
+
+    .list-table-format img {
+      display: none;
     }
     .list-table-format.title {
         display: none;
