--- a/admin/src/pages/Orders/Orders.css
+++ b/admin/src/pages/Orders/Orders.css
@@ -3,36 +3,38 @@
     grid-template-columns: 0.5fr 2fr 2fr;
     align-items: center;
     gap: 30px;
-    border-radius: 3px;
+    border-radius: 5px;
     margin: 30px 0px;
     font-size: 14px;
     color: #505050;
-    background-color: rgb(227, 227, 228);
+    border: 1px solid black;
+    background-color: rgb(255, 255, 255);
 }
+
+.order-item img {
+   margin-left: 50px;
+}
+
 
 .order-item-food, .order-item-name {
     font-weight: 600;
-    font-family: sans-serif;
+   
 }
 
-.order-item-name {
-    margin-top: 10px;
-    margin-bottom: 6px;
-    font-family: sans-serif;
-}
+
 
 .order-item-food {
     margin-top: 20px;
-    font-family: sans-serif;
+   
 }
 
 .order-item-address {
     margin-bottom: 10px;
-    font-family: sans-serif;
+   
 }
 .order-item-phone {
     margin-bottom: 10px;
-    font-family: sans-serif;
+    
 }
 
 .order-item select {
