Change in admin panel

--- a/admin/src/pages/Orders/Orders.css
+++ b/admin/src/pages/Orders/Orders.css
@@ -37,6 +37,10 @@
     
 }
 
+.order-data p {
+    margin-top: 10px;
+}
+
 .order-item select {
     background-color: #000000;
     width: max(10vw, 120px);
